--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "@prisma/client": "^6.18.0",
         "axios": "^1.11.0",
         "body-parser": "^1.20.3",
         "cheerio": "^1.0.0-rc.10",
         "cors": "^2.8.5",
-        "express": "^4.18.2",
+        "express": "^4.21.2",
         "express-rate-limit": "^6.7.0",
         "express-session": "^1.18.1",
         "js-confuser": "^2.0.0",
         "morgan": "^1.9.1",
         "node-cron": "^3.0.3",
         "node-fetch": "^2.7.0",
-        "node-schedule": "^2.1.1"
+        "node-schedule": "^2.1.1",
+        "prisma": "^6.18.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
