--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "node-cron": "^3.0.3",
         "node-fetch": "^2.7.0",
         "node-schedule": "^2.1.1",
-        "prisma": "^6.18.0"
+        "prisma": "^6.18.0",
+        "web-push": "^3.6.7"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
