update env example, readme, push notif with key header

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,21 @@
+# Port dimana server berjalan
 PORT=3000
 
-# example npm = 123124323,1514512341234,123513451345,134513451345,13451345
+# secret untuk session express
 SESSION_SECRET=
+
+# example npm = 123124323,1514512341234,123513451345,134513451345,13451345
+# Daftar npm valid yang boleh edit tugas & dosen
 VALID_NPMS=
 VALID_NPMS_DOSEN=
+
+# VAPID key untuk push notification web
 VAPID_PUBLIC_KEY=
 VAPID_PRIVATE_KEY=
 VAPID_SUBJECT=mailto:admin@
+
+# discord webhook url untuk notifikasi 
+DISCORD_WEBHOOK_URL=
+
+#key untuk testing push
+TEST_PUSH_KEY=
