--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,8 @@ PORT=3000
 SESSION_SECRET=
 
 # example npm = 123124323,1514512341234,123513451345,134513451345,13451345
-# Daftar npm valid yang boleh edit tugas & dosen
+# Daftar npm valid yang bisa daftar
 VALID_NPMS=
-VALID_NPMS_DOSEN=
 
 # VAPID key untuk push notification web
 VAPID_PUBLIC_KEY=
@@ -28,3 +27,13 @@ TZ=Asia/Jakarta
 
 #Sessions key
 SESSION_SECRET=
+
+#admin pin untuk login ke admin panel
+ADMIN_PIN=
+
+# JWT secret untuk generate token admin
+JWT_SECRET=
+
+# Uploader service config
+UPLOADER_URL=
+UPLOADER_APIKEY=
