--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "dependencies": {
         "@prisma/client": "^6.18.0",
         "axios": "^1.13.2",
+        "bcryptjs": "^3.0.3",
         "body-parser": "^1.20.3",
         "cheerio": "^1.0.0-rc.10",
         "cors": "^2.8.5",
         "express": "^4.21.2",
         "express-rate-limit": "^6.7.0",
         "express-session": "^1.18.1",
+        "form-data": "^4.0.5",
         "js-confuser": "^2.0.0",
+        "jsonwebtoken": "^9.0.2",
         "morgan": "^1.9.1",
+        "multer": "^2.0.2",
         "node-cron": "^3.0.3",
         "node-fetch": "^2.7.0",
         "node-schedule": "^2.1.1",
-        "prisma": "^6.18.0",
+        "prisma": "^6.19.0",
         "web-push": "^3.6.7"
     },
     "devDependencies": {
