--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,6 @@ JWT_SECRET=
 # Uploader service config
 UPLOADER_URL=
 UPLOADER_APIKEY=
+
+# MODE SERVER: 'production' /'maintenance'/ 'development'
+MODE=
