--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,5 @@ JWT_SECRET=
 UPLOADER_URL=
 UPLOADER_APIKEY=
 
-# MODE SERVER: 'production' /'maintenance'/ 'development'
+# MODE SERVER: production / maintenance / development
 MODE=
