--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,8 @@ JWT_SECRET=
 UPLOADER_URL=
 UPLOADER_APIKEY=
 
-# MODE SERVER: production / maintenance / development
+# MODE SERVER: 'production' atau 'maintenance' -> for all services
 MODE=
+
+# MODE SERVER: 'production' atau 'maintenance' -> for cron jobs
+MODE2=
