added new status

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,6 @@ MODE=
 
 # MODE SERVER: 'production' atau 'maintenance' -> for cron jobs
 MODE2=
+
+# STATUS SERVER: 'libur' atau 'ujian'  atau 'clear' -> all
+STATUS=
